--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,7 @@
 
         <!-- Change the path for your system to match your Steam installation. -->
         <!-- If you're not sure, go to Slay the Spire in the Steam library, and choose Manage -> Browse local files -->
-        <steam.windows>C:/Program Files (x86)/steam/steamapps</steam.windows>
-        <steam.mac>${user.home}/Library/Application Support/Steam/steamapps</steam.mac>
-        <steam.linux>${user.home}/.local/share/Steam/steamapps</steam.linux>
-        <!-- In the Maven tab, under Profiles, make sure only the profile for your system is enabled. Windows is the default. -->
+        <steam.windows>D:\steam\steam\steamapps</steam.windows>
 
         <!-- These don't have to be up to date, it's just nice if they are. -->
         <SlayTheSpire.version>12-18-2022</SlayTheSpire.version>
@@ -27,9 +24,9 @@
     <version>0.0.0</version>
     <!-- Avoid using \ in this description, as they can cause the description to fail to load. -->
     <!-- If you really want to use them, you'll need to "escape" them by putting another one in front, like \\ -->
-    <description>This is a description!\n"This" is a second line of description.
-        This "\\" is a slash. If you add another line like this:
-        All the spaces on the left of this will be gone. If you want spacing on a new line, do it:\n    like this.</description>
+    <description>这是描述的第二行。
+        此 “\\” 是斜杠。如果添加另一行，如下所示：
+        此文件左侧的所有空格都将消失。如果要在新行上设置间距，请执行：\n，如下所示。</description>
 
     <!--You shouldn't need to change anything below this point, but feel free to look at it.-->
     <!--You'll get a warning regarding these when you package your mod, but don't worry, it's just set up like this for convenience.-->
@@ -202,57 +199,6 @@
                 <steam.path>${steam.windows}</steam.path>
                 <sts.path>/common/SlayTheSpire/desktop-1.0.jar</sts.path>
             </properties>
-        </profile>
-
-        <profile>
-            <id>linux</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <os>
-                    <family>unix</family>
-                </os>
-            </activation>
-            <properties>
-                <steam.path>${steam.linux}</steam.path>
-                <sts.path>/common/SlayTheSpire/desktop-1.0.jar</sts.path>
-            </properties>
-        </profile>
-
-        <profile>
-            <id>mac</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <os>
-                    <family>mac</family>
-                </os>
-            </activation>
-            <properties>
-                <steam.path>${steam.mac}</steam.path>
-                <sts.path>/common/SlayTheSpire/SlayTheSpire.app/Contents/Resources/desktop-1.0.jar</sts.path>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>3.1.0</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <configuration>
-                                    <target>
-                                        <!-- This moves your mod into a common folder where all mods you make can go. -->
-                                        <copy file="target/${project.artifactId}.jar" tofile="${steam.path}/common/SlayTheSpire/SlayTheSpire.app/Contents/Resources/mods/${project.artifactId}.jar"/>
-                                    </target>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
     </profiles>
 </project>
