--- a/pom.xml
+++ b/pom.xml
@@ -50,13 +50,13 @@
             <scope>system</scope>
             <systemPath>${steam.path}/workshop/content/646570/1605060445/ModTheSpire.jar</systemPath>
         </dependency>
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>aberration</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${steam.path}/workshop/content/646570/3043029110/aberration.jar</systemPath>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.example</groupId>-->
+<!--            <artifactId>aberration</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${steam.path}/workshop/content/646570/3043029110/aberration.jar</systemPath>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>basemod</groupId>
             <artifactId>basemod</artifactId>
