--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <modID>basicmod</modID>
-        <author>Me! (Or well, you. If you want to use \"quotes\" make sure you have slashes in front of them like this.)</author>
+        <modID>JinYongMartialArts</modID>
+        <author>sevenyjl</author>
 
         <!-- Change the path for your system to match your Steam installation. -->
         <!-- If you're not sure, go to Slay the Spire in the Steam library, and choose Manage -> Browse local files -->
@@ -20,13 +21,14 @@
     </properties>
 
     <!-- This information will be displayed in ModTheSpire, the modded launcher. -->
-    <name>Basic Mod</name>
+    <name>金庸武侠</name>
     <version>0.0.0</version>
     <!-- Avoid using \ in this description, as they can cause the description to fail to load. -->
     <!-- If you really want to use them, you'll need to "escape" them by putting another one in front, like \\ -->
     <description>这是描述的第二行。
         此 “\\” 是斜杠。如果添加另一行，如下所示：
-        此文件左侧的所有空格都将消失。如果要在新行上设置间距，请执行：\n，如下所示。</description>
+        此文件左侧的所有空格都将消失。如果要在新行上设置间距，请执行：\n，如下所示。
+    </description>
 
     <!--You shouldn't need to change anything below this point, but feel free to look at it.-->
     <!--You'll get a warning regarding these when you package your mod, but don't worry, it's just set up like this for convenience.-->
@@ -36,11 +38,6 @@
     <artifactId>${modID}</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.8.26</version>
-        </dependency>
         <dependency>
             <groupId>com.megacrit.cardcrawl</groupId>
             <artifactId>slaythespire</artifactId>
@@ -55,13 +52,13 @@
             <scope>system</scope>
             <systemPath>${steam.path}/workshop/content/646570/1605060445/ModTheSpire.jar</systemPath>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.example</groupId>-->
-<!--            <artifactId>aberration</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--            <scope>system</scope>-->
-<!--            <systemPath>${steam.path}/workshop/content/646570/3043029110/aberration.jar</systemPath>-->
-<!--        </dependency>-->
+<!--                <dependency>-->
+<!--                    <groupId>org.example</groupId>-->
+<!--                    <artifactId>aberration</artifactId>-->
+<!--                    <version>1.0-SNAPSHOT</version>-->
+<!--                    <scope>system</scope>-->
+<!--                    <systemPath>${steam.path}/workshop/content/646570/3043029110/aberration.jar</systemPath>-->
+<!--                </dependency>-->
         <dependency>
             <groupId>basemod</groupId>
             <artifactId>basemod</artifactId>
@@ -170,7 +167,8 @@
                             <target>
                                 <!--This puts a copy of your mod's jar file into the SlayTheSpire mods folder so it will be loaded.-->
                                 <!--On mac, it will be copied to another location. See further below.-->
-                                <copy file="target/${project.artifactId}.jar" tofile="${steam.path}/common/SlayTheSpire/mods/${project.artifactId}.jar"/>
+                                <copy file="target/${project.artifactId}.jar"
+                                      tofile="${steam.path}/common/SlayTheSpire/mods/${project.artifactId}.jar"/>
                             </target>
                         </configuration>
                         <goals>
