--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,8 @@
     <version>0.0.0</version>
     <!-- Avoid using \ in this description, as they can cause the description to fail to load. -->
     <!-- If you really want to use them, you'll need to "escape" them by putting another one in front, like \\ -->
-    <description>这是描述的第二行。
-        此 “\\” 是斜杠。如果添加另一行，如下所示：
-        此文件左侧的所有空格都将消失。如果要在新行上设置间距，请执行：\n，如下所示。
+    <description>
+        根据金庸中武学以及人物进行改变。
     </description>
 
     <!--You shouldn't need to change anything below this point, but feel free to look at it.-->
