--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
     <artifactId>${modID}</artifactId>
 
     <dependencies>
+                     <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.25</version>
+        </dependency>
         <dependency>
             <groupId>com.megacrit.cardcrawl</groupId>
             <artifactId>slaythespire</artifactId>
