添加MyUtils 基础开发工具类

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
     <modules>
         <module>lvBu</module>
         <module>JinYongWuXia</module>
-        <module>decompiled-Downfall</module>
+        <module>lottery</module>
+        <module>MyUtils</module>
     </modules>
 
     <properties>
